--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
       </section>
 
       <section>
+        <h2>What we're talking about</h2>
+        <ul>
+          <li class="fragment">You're helping someone with their <span class="fragment strike">code</span><span class="fragment"> coding abilities</span></li>
+          <li class="fragment">This helping relationship might be temporary</li>
+          <li class="fragment"><strike>Python</strike></li>
+          <li class="fragment"><span class="fragment strike">Teaching and pedagogy</span></li>
+        </ul>
+        <aside class="notes" data-markdown>
+          - So I'd like to talk about a specific scenario that you will probably find yourself in at some point if you haven't already: **you are sitting next to someone or you're on a video call with someone, they need with their code, and they think you can help them**
+          - They don't just want you to fix their code **(click)**, they want to improve their skills, and some of those are skills that you already have
+          - And this moment might be temporary: they might need your help again later, but we're focused on the learning moment we have right now
+          - So that's what we're focusing on...
+          - During this talk, I'm *not* about Python or any other programming languages for that matter
+          - I will talk a little about **(click)** teaching itself... but not very much **(click)**
+          - At least not the kinds of things you'll often hear in books on teaching and learning
+          - We're mostly going to talk about the human side of mentoring someone else
+        </aside>
+      </section>
+
+      <section>
 
       <section>
         <h1>Be a Learning Ally</h1>
@@ -177,10 +197,7 @@
         <h1>Build Trust</h1>
         <aside class="notes" data-markdown>
           - So it's important that you your learner trusts you
-          - Being deliberate (5 minutes)
-          - Phrasing things carefully
-          - Being encouraging
-          - Dethroning yourself
+          - TODO
         </aside>
       </section>
 
@@ -215,13 +232,18 @@
           <li class="fragment">What do you think might happen when we run this?  What's your guess?</li>
         </ul>
         <aside class="notes" data-markdown>
+          - Here's 4 ways to say almost the same thing...
           - **4 Clicks**
             - "What will this code do?" vs "What could this code do?  What are the possibilities?"
           - Confident and assertive language has its place, but you want to *invite* your learners to make mistakes and **to guess**
-          - Sometimes hedged language that's lacking in confidence or assertiveness can be more inviting and more reassuring
-          - This is very situational and it definitely takes playing with to figure out what seems to work best for you, your learners, and the situation that you're in
-          - But I definitely want you to try to be **encouraging**
+          - That last way of saying this is welcoming, you're inviting your learner to guess
+          - That first one is a test: that's a nerve-wracking way to ask that question
+          - You want to quiz people: by that I mean you want them to try to retrieve information from their heads
+          - But you **don't want people to feel like they're being quizzed**
           - TODO
+            - Sometimes hedged language that's lacking in confidence or assertiveness can be more inviting and more reassuring
+            - This is very situational and it definitely takes playing with to figure out what seems to work best for you, your learners, and the situation that you're in
+          - Regardless of how you do this, I definitely want you to try to be **encouraging**
         </aside>
       </section>
 
@@ -314,7 +336,13 @@
           <li class="fragment">A syntax error that's stopping the code from running at all</li>
         </ol>
         <aside class="notes" data-markdown>
-          - TODO
+          - Let's say your learner says: "my code doesn't work"
+          - They show you the code, and you see 4 things:
+            - A function that's improperly named
+            - Code that's a little ugly, but it works
+            - Something that seems like a logical error: a misunderstanding in the actual problem you're solving
+            - And a syntax error: something that stops the code from running at all
+          - Which of these do you focus on?  And which one do you bring up first?
         </aside>
       </section>
 
