--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </aside>
       </section>
 
-      <section data-background-image="Water-Lynx-sediment-control.jpg">
+      <section>
         <h2>Reflect</h2>
         <aside class="notes" data-markdown>
           - When you speak, **question what you're saying and why**
