Update speaker notes some

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li class="fragment"><strike>Python</strike></li>
           <li class="fragment"><span class="fragment strike">Teaching and pedagogy</span></li>
           <li class="fragment"><strike>Mentoring</strike></li>
-          <li class="fragment">Being a helpful in the moment <span class="fragment"> (Coaching)</span></li>
+          <li class="fragment">Being helpful in the moment <span class="fragment"> (Coaching)</span></li>
         </ul>
         <aside class="notes" data-markdown>
           - So we're going to talk about a specific scenario that you've probably found yourself in before **(click)**: **you're sitting next to someone and they need with their code**
@@ -348,14 +348,13 @@
       <section>
         <h2>Believe in your learners</h2>
         <aside class="notes" data-markdown>
-          - If you don't believe in your learner's ability to improve, they might not improve
+          - If you don't believe in your learner's ability to improve, they are less likely to improve their skills
           - Who has heard of the growth mindset?
           - If you adopt a growth mindset you believe that through directed effort, you can and you will improve your skills: that your skills aren't fixed but are expandable
-          - People who adopt a growth mindset are more likely to grow their skills: if you think your skills can grow, you're more likely to keep trying until they really do
-          - Related to the growth mindset...
-          - If you're coaching someone and they trust you and you believe in their abilities and they know it, they're a lot more likely to believe in their own abilities
-          - This is a sort of vicarious growth mindset: you're considerably more likely to learn if you have a coach or a mentor who believes in you.  That makes it easier to believe in yourself.
-          - You really need to genuinely believe in the abilities of your learners
+          - There's research that backs up the idea that you're more likely to learn if you adopt a growth mindset: you're more likely to grow your skills if you believe in your ability to do so
+          - Your belief in your learner is *also very important*: it's hard for your learner to believe in themselves, if you don't believe in them
+          - They come from a baseline of understanding that's below yours: you can't judge that baseline, you just **have to believe** that they'll build up from where they're at
+          - You need to convince yourself of your learner's abilities and give them the impression, explicitly or implicitly, that you believe in them
         </aside>
       </section>
 
@@ -420,23 +419,23 @@
             - Something that seems like a logical error: a misunderstanding in the actual problem you're solving
             - And a syntax error: something that stops the code from running at all
           - Which of these do you focus on?  And which one do you bring up first?
+          - I'd argue that last one is the most important *right now*: if you have a syntax error, Python won't let you get any further.
+          - And that second one is maybe the least important.  Code style is very important, but whether your code *works* is much more important.  Until that point, talking about code style is just a distraction.  You may not even want to bring up code style *at all* until you have time to make it the primary focus of your conversation.
         </aside>
       </section>
 
       <section>
         <h2>Learn About Learning</h2>
         <aside class="notes" data-markdown>
-          - TODO
-          - And something that's overlooked quite a bit, but I really think is important is to discuss the act of learning itself
-          - If you don't how learning works, I have some resources to recommend at the end of this talk
-          - I said earlier that you don't learn by putting information into your heads but by trying to take it out of your heads
-          - I tell that to my learners... because it's easy to forget but remembering this fact helps you focus on learning effectively
-          - You're not just there to teach your learners, you're there to help them **be better learners**
-          - Another thing that's overlooked often is the growth mindset: this is the idea that your learners aren't good at things yet, but they *will* improve if they put in the effort to do so
-          - This is a big one because you need to embrace this too: each of your learners comes from a baseline of understanding.  **You can't judge that baseline**, but that's what they have to work up from.
-          - And they will, if you believe that they will and you **let them know that you believe** that they will.  You don't need to do this explicitly, but you need to give the impression of believing in your learners.  If you don't believe in them, you need to convince yourself to: **you must believe in their ability to learn**
-          - So embrace the act of learning and discuss how learning works with your learners
-          - That's all I've got for you
+          - One thing to do while you're slowing down is to focus on the act of learning itself
+          - There are a lot of people who've devoted their careers to improving the learning habits and teaching habits of others.
+          - Try to borrow ideas from those people so that you can become better at teaching, but also so that you can help your learner become better at learning.
+          - Learn about learning best practices so that you can share them
+            - Talk about the growth mindset
+            - Talk about the fact that you learn by retrieving information from your head, not by putting it in
+            - I have some resources I'll recommend at the end that will help you learn more about learning theory
+          - Remember that you're not just there to help your learner improve their programming skills, you're there to help them **become better at learning itself**.
+          - Software development usually entails a life long devotion to learning.  It's never too late to improve your learning skills.
         </aside>
       </section>
 
@@ -444,9 +443,9 @@
         <h2 class="fragment strike" data-fragment-index=1>Fake it until you make it</h2>
         <h2 class="fragment" data-fragment-index=1>Adopt a growth mindset</h2>
         <aside class="notes" data-markdown>
-          - People sometimes say "fake it until you make it"
-          - I don't really like this phrase: I just don't the connotation... but there is truth behind this idea
-          - If you *slow yourself down* and think "if I was a good mentor", "what might I do in this situation", you're sort of pretending you're a good mentor... you're faking it
+          - "Fake it until you make it"
+          - I don't really like this phrase: I don't really like the connotation... but there is truth behind this idea
+          - If you *slow yourself down* and think "if I were a *really good* mentor", you're sort of pretending you're a good mentor... you're faking it
           - But in the process you're trying to act deliberately, you're acting with intention
           - But you're also practicing, which is *part* of learning
           - As you continue to deliberately act a certain way, you'll eventually start to intuitively that act that way
@@ -465,8 +464,12 @@
           <li class="fragment">Adopt a growth mindset</li>
         </ul>
         <aside class="notes" data-markdown>
-          - TODO
-          - If you see a trait you like in someone else, steal it.  It's yours.
+          - So I want you to slow yourself down: slow your thinking, speaking, and acting
+          - I want you to take things one step at a time: don't distract yourself or your learner by jumping ahead of the one thing that's important right now
+          - And I want you to learn a bit about learning itself so that you can help your learners move toward their goals more deliberately
+          - I also want you to adopt a growth mindset, not just for your learner's sake but for your sake
+          - You can grow your own skills by faking it until you make it
+            - If you see a trait you like in someone else, steal it.  It's yours.
           - Whatever being a good mentor means to you, you can move in that direction if you put *your mind* to it
         </aside>
       </section>
