Add recommended resources

--- a/index.html
+++ b/index.html
@@ -467,23 +467,20 @@
       </section>
 
       <section style="text-align: left;" data-background="#663399" data-background-transition="slide" data-transition="slide">
-        <h2>Need help getting your team <nobr>up to speed on Python?</nobr></h2>
-        <h3>
-          <strong>Trey Hunner</strong><br>
-          <small>Python Team Trainer</small>
-        </h3>
-        <p>
-          <small>
-            Contact me: <a href="mailto:&#116;&#114;&#101;&#121;&#064;&#116;&#114;&#117;&#116;&#104;&#102;&#117;&#108;&#046;&#116;&#101;&#099;&#104;&#110;&#111;&#108;&#111;&#103;&#121;">&#116;&#114;&#101;&#121;&#064;&#116;&#114;&#117;&#116;&#104;&#102;&#117;&#108;&#046;&#116;&#101;&#099;&#104;&#110;&#111;&#108;&#111;&#103;&#121;</a>
-          </small>
-        </p>
-        <p>
-        <a href="http://truthful.technology"><img src="logo.svg" class="no-style logo"></a>
-        <a href="http://pythonmorsels.com"><img src="python-morsels-logo.svg" class="no-style logo"></a>
-        </p>
+        <h2 style="margin-top: 1.5em;">Find my recommended resources at</h2>
+        <h2><a href="http://trey.io/nbpy2018">http://trey.io/RH</a></h2>
+        <div style="margin-top: 2.5em;">
+          <p style="float: left; margin-right: 2em;">
+            <strong>Trey Hunner</strong><br>
+            <small>Python Team Trainer</small>
+          </p>
+          <p style="float: left;">
+          <a href="http://truthful.technology"><img src="logo.svg" class="no-style logo"></a>
+          <a href="http://pythonmorsels.com"><img src="python-morsels-logo.svg" class="no-style logo"></a>
+          </p>
+        </div>
         <aside class="notes" data-markdown>
-          - I'd love to help you improve your Python skills
-          - Find me in the halls or at my booth if you'd like to chat about that later
+          - If you'd like to dive a little deeper into coaching, communication, or the study of teaching and learning you can check out some resources I'd recommend watching and reading at trey.io/rh
           - Thank you!
         </aside>
       </section>
