Add wrap up slides

--- a/index.html
+++ b/index.html
@@ -520,6 +520,27 @@
 
       </section>
 
+      <section data-background-image="collage.png" data-transition="fade" data-background-transition="zoom" data-transition-speed="fast">
+        <aside class="notes" data-markdown>
+          - This is a big topic with a lot in and around it and I've pretty much just scratched the surface
+          - I have a list of resources that I've found which I've categorized by topic
+          - You can find a URL to access the talks, articles, and books I'd recommend on my last slide
+        </aside>
+      </section>
+
+      <section data-transition="fade" data-background="#ffffff">
+        <h1 class="fragment">Be a Learning Ally</h1>
+        <h1 class="fragment">Build Trust</h1>
+        <h1 class="fragment">Slow Down</h1>
+        <aside class="notes" data-markdown>
+          - Remember
+            - **(click)** To be a learning ally, not an expert
+            - **(click)** Build trust with your learner so they'll be more comfortable being vulnerable with you
+            - **(click)** And slow down to reflect on what you're doing and why you're doing it
+          - Thank you.
+        </aside>
+      </section>
+
       <section style="text-align: left;" data-background="#663399" data-background-transition="slide" data-transition="slide">
         <h2 style="margin-top: 1.5em;">Recommended resources at</h2>
         <h2><a href="http://trey.io/pycascades2019">http://trey.io/pycascades2019</a></h2>
@@ -534,10 +555,9 @@
           </p>
         </div>
         <aside class="notes" data-markdown>
-          - If you'd like to dive a little deeper into coaching, communication, or the study of teaching and learning you can check out some resources I'd recommend watching and reading at trey.io/pycascades2019
-          - Thank you!
           - ...
-          - By the way I have Python Morsels stickers.  Come find me if you'd like one.
+          - You can visit that URL, trey.io/pycascades2019, for more
+          - I have a bunch of Python Morsels stickers here if you'd like any
         </aside>
       </section>
 
