Final changes to speaker notes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <section>
           <h2>Show of hands</h2>
           <aside class="notes" data-markdown>
-            - TODO visual of people raising hands
             - Who has coached at Django Girls or another programming workshop in the past?
             - ... Keep your hands up
             - Who has mentored a new hire at work?
@@ -117,7 +116,6 @@
           - Is being an ally in learning
           - When you're coaching someone, **I don't want you to be an expert**, I want you to be an ally
           - Because...
-          - TODO add visual here?... and for the other 2 sections?
         </aside>
       </section>
 
@@ -129,7 +127,6 @@
           - Your job is **to support and guide your learner**, but they *shouldn't* be *dependent* upon you
           - This process is **centered around your learner**, not you
           - ...
-          - TODO add visual here showing star and side character
         </aside>
       </section>
 
@@ -298,10 +295,10 @@
       <section>
         <h1>Build Trust</h1>
         <aside class="notes" data-markdown>
-          - TODO improve speaker notes
           - That you build trust with your learner
-          - Building trust with your learner, will allow your learner to feel comfortable being vulnerable with you
-          - One big way you can build trust, is ...
+          - Your learner needs to feel comfortable being vulnerable with you
+          - They need to trust you
+          - One *big* way you can build trust, is to find a way to make **yourself** vulnerable
         </aside>
       </section>
 
@@ -314,7 +311,6 @@
           <li class="fragment">Saying "I don't know"</li>
         </ul>
         <aside class="notes" data-markdown>
-          - To find a way to make yourself vulnerable
           - There are a lot of ways to be a bit more vulnerable
           - For example, I make bad jokes **(click)**.  They're not usually not very funny and that makes me a little bit vulnerable.
           - I also make mistakes **(click)**, sometimes on purpose and most of the time on accident.  But I don't ever "I did that on purpose to test you".  I want my learners to *feel* my fallibility.
@@ -377,7 +373,6 @@
       <section>
         <h2>You must believe in your learners</h2>
         <aside class="notes" data-markdown>
-          - TODO Visual and analogy with female characters in movie where belief was key (there was or wasn't belief in abilities)
           - If you don't believe in your learner's ability to improve, they are less likely to improve their skills
           - Who has heard of the growth mindset?
           - If you adopt a growth mindset you believe that through directed effort, you can and you will improve your skills: that your skills aren't fixed but are expandable
@@ -421,7 +416,6 @@
           - Is slow down
           - *(long pause)*
           - *(continued pause)*
-          - TODO more pauses like this: June said so
           - I want you to slow down...
             - your thinking
             - your speaking
@@ -450,18 +444,19 @@
           - Unless they're asking you about code style, that's not the most pressing issue of these four **(*elaborate*)** **(click)**
           - The most important *right now* might be the one Python is *complaining* about: the syntax error **(click)**
           - You don't want to distract your learner: so just focus on *the one thing* that's important *right now*.  And then stop.  *The rest* can come later.
-          - TODO one thing priority visual then stop sign visual?
         </aside>
       </section>
 
-      <section>
-        <h2>Reflect</h2>
+      <section data-background-color="#444" data-background-image="reflection-cropped.jpg">
+        <h2 class="fragment">Reflect<br><br><br><br><br><br><br></h2>
         <aside class="notes" data-markdown>
-          - TODO a bit more here
+          - You're going to be better at knowing what to do next if you...
           - Try to *empathize* with what your learner might be feeling
-          - When you speak, *question* **what you're saying** and **why you're saying it**
+          - I want you to slown down, and reflect
+          - When you speak, *question* **what you're saying**, **why you're saying it**, and how it might be heard **(click)**
           - ...
-          - Reflecting on your actions and words *in-the-moment* **can** be distracting, but do try to slow down and reflect from time-to-time
+          - Reflecting on your actions and words *in-the-moment* **can** be distracting... I don't want you to get hung up on this
+          - But do try to make sure that you carve out some time every once in a while to marinate in the moment that you're in
           - *Reflection* is a very *important* part of learning, and *you* are also learning
         </aside>
       </section>
@@ -469,7 +464,6 @@
       <section>
         <h2 class="fragment">Learn About Learning</h2>
         <aside class="notes" data-markdown>
-          - TODO visuals
           - One thing you should consider doing, is learning **(click)** about learning
           - I recommend learning about the best practices around learning
           - This is useful for you because *you* are learning
