Add transitions and fix notes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           - We **don't learn** by trying to *put information into our heads*
           - We *learn* by attempting to retrieve information *from* our heads
           - *(pause)*
-          - Who has heard the expression "you learn by doing"?
+          - Who has heard the expression "you learn by doing"? **(click)**
           - *(pause)* It's true. You don't learn by consuming information, you learn by retrieving it: the doing
           - ...
           - This is tricky because *the doing* is **intimidating** when you don't know what you're doing.
@@ -200,6 +200,7 @@
           - If you're sitting next to someone who you're coaching and they ask "why am I getting this error message?" instead of saying "ah ha, I know the answer", say "let's look it up"
           - *You* are a resource for your learner, but **you're not their only resource**
           - You want to delegate to other sources of information that are more accessible at 2am... or over the weekend
+          - ...
           - So making mistakes together is important and looking things up together is important...
           - But sometimes you really just need...
         </aside>
@@ -393,10 +394,10 @@
         </ul>
         <aside class="notes" data-markdown>
           - So building trust involves
-            - Being vulnerable
-            - Speaking deliberately
-            - Which involves making sure you're being encouraging and not alienating
-            - And believing in the ability your learner has, to learn.  Believing in their potential and their capacity to grow themselves.
+            - Being vulnerable **(click)**
+            - Speaking deliberately **(click)**
+            - Which involves making sure you're being encouraging and not alienating **(click)**
+            - And believing in the ability your learner has, to learn. **(click)**  Believing in their potential and their capacity to grow themselves.
           - ...
           - So to recap, you want to be an learning ally, not an expert
           - You also want to be want to build trust so your learner will be comfortable with you
@@ -450,13 +451,13 @@
       <section data-background-color="#444" data-background-image="reflection-cropped.jpg">
         <h2 class="fragment">Reflect<br><br><br><br><br><br><br></h2>
         <aside class="notes" data-markdown>
-          - You're going to be better at knowing what to do next if you...
-          - Try to *empathize* with what your learner might be feeling
-          - I want you to slown down, and reflect
-          - When you speak, *question* **what you're saying**, **why you're saying it**, and how it might be heard **(click)**
+          - You're going to be better at knowing what to do next if you can *empathize* with what your learner might be feeling
+          - Slow down, and reflect **(click)**
+          - When you speak, *question* **what you're saying**, **why you're saying it**, and how it might be heard
           - ...
+          . ...
           - Reflecting on your actions and words *in-the-moment* **can** be distracting... I don't want you to get hung up on this
-          - But do try to make sure that you carve out some time every once in a while to marinate in the moment that you're in
+          - But do try to make sure that you carve out some time every once in a while to *marinate in the moment*
           - *Reflection* is a very *important* part of learning, and *you* are also learning
         </aside>
       </section>
@@ -464,9 +465,9 @@
       <section>
         <h2 class="fragment">Learn About Learning</h2>
         <aside class="notes" data-markdown>
-          - One thing you should consider doing, is learning **(click)** about learning
-          - I recommend learning about the best practices around learning
-          - This is useful for you because *you* are learning
+          - Another thing to consider doing, is learning **(click)** about learning
+          - There are *a lot* of folks who write about learning best practices the same way developers write about programming best practices
+          - These best practices will be useful for you because *you* are learning
           - But it'll also be useful to share these concepts with your learner
             - Talk about the growth mindset
             - And talk about the fact that you learn by retrieving information from your head, not by putting it into your head
@@ -516,9 +517,9 @@
 
       <section data-background-image="collage.png" data-transition="fade" data-background-transition="zoom" data-transition-speed="fast">
         <aside class="notes" data-markdown>
-          - This is a big topic with a lot in and around it and I've pretty much just scratched the surface
-          - I have a list of resources that I've found which I've categorized by topic
-          - You can find a URL to access the talks, articles, and books I'd recommend on my last slide
+          - ...
+          - I've pretty much only scratched the surface on this topic
+          - If you'd like to dive deeper into coaching, teaching, and related topics, I have URL with resources I recommend that I'll share on my last slide
         </aside>
       </section>
 
@@ -527,8 +528,8 @@
         <h1 class="fragment">Build Trust</h1>
         <h1 class="fragment">Slow Down</h1>
         <aside class="notes" data-markdown>
-          - Remember
-            - **(click)** To be a learning ally, not an expert
+          - ...
+            - **(click)** Be a learning ally, not an expert
             - **(click)** Build trust with your learner so they'll be more comfortable being vulnerable with you
             - **(click)** And slow down to reflect on what you're doing and why you're doing it
           - Thank you.
@@ -550,8 +551,7 @@
         </div>
         <aside class="notes" data-markdown>
           - ...
-          - You can visit that URL, trey.io/pycascades2019, for more
-          - I have a bunch of Python Morsels stickers here if you'd like any
+          - You can visit that URL, trey.io/pycascades2019, for more on this topic
         </aside>
       </section>
 
