Add talk recording

--- a/resources.html
+++ b/resources.html
@@ -48,15 +48,14 @@
 
     <hr>
 
-    <!--
     <h3>Recording of this talk</h3>
     <p>
-    You can watch the recording of this talk below.
+    The recording for this talk hasn't been processed yet.
+    Below is a live stream of PyCascades Day 2, which includes a recording of my talk.
     </p>
-    <iframe width="100%" height="340" src="TODO" frameborder="0" allowfullscreen></iframe>
+    <iframe width="100%" height="340" src="https://www.youtube.com/embed/MTdYyCKcI8Q?start=27380" frameborder="0" allowfullscreen></iframe>
 
     <hr>
-    -->
 
     <h3>Coaching Resources</h3>
 
