Add Kenneth Love's talk 💖

--- a/resources.html
+++ b/resources.html
@@ -76,6 +76,14 @@
     Shannon talks about some great lessons she's learned in this talk, not just on coaching, but on the broader aspects of teaching others.
     </p>
 
+    <h5><a href="https://www.youtube.com/watch?v=FMwU1rszahE">&ldquo;Those Who Care, Teach!&rdquo; by Kenneth Love</a></h5>
+    <p>
+    Kenneth gave a talk on teaching at the first very PyCascades last year!
+    There are a lot of great things in Kenneth's talk that aren't in mine or Shannon's talks.
+    If you're interested in teaching, to a group especially, watch Kenneth's talk!
+    Even if you're primarily focused on teaching through text on the Internet, Kenneth's talk has some great advice for you.
+    </p>
+
     <h5><a href="https://www.youtube.com/watch?v=yD0kzU4Pu-Q">&ldquo;Emotional Intelligence for Engineers&rdquo; by April Wensel</a></h5>
     <p>
     Interacting with other people is an essential part of our job as software developers: through our meetings, our code reviews, and even our documentation.
